force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>Represents a scheduled consultation between a patient and a doctor.</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APT-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>