force-app/main/default/objects/Appointment__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Patient__r.Name &amp; &quot; - &quot; &amp; Treatment__r.Name)</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>