force-app/main/default/objects/Appointment__c/validationRules/Appointment_Time_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Time_Limits</fullName>
    <active>true</active>
    <description>Appointments can only be scheduled between 7:00 AM and 8:00 PM.</description>
    <errorConditionFormula>OR(
  Start_Time__c &lt; TIMEVALUE(&quot;07:00:00.000&quot;),
  Start_Time__c &gt; TIMEVALUE(&quot;20:00:00.000&quot;),
  AND(
    NOT(ISBLANK(End_Time__c)),
    End_Time__c &gt; TIMEVALUE(&quot;20:00:00.000&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Appointments can only be scheduled between 7:00 AM and 8:00 PM.</errorMessage>
</ValidationRule>