force-app/main/default/objects/Appointment__c/listViews/Appointments.listView-meta.xml
<ListView>
    <fullName>Appointments</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Appointments</label>
</ListView>