force-app/main/default/objects/Appointment__c/listViews/List_of_Appointments.listView-meta.xml
<ListView>
    <fullName>List_of_Appointments</fullName>
    <columns>Subject__c</columns>
    <filterScope>Mine</filterScope>
    <label>List of Appointments</label>
</ListView>